# lambda.strategy

./: .gitignore  Cargo.toml  package.json  serverless.yml
.github/workflows/: main.yml
deploy/: .sh  cloudwatch.tf  dynamodb.tf  iam.tf  lambda.tf  main.tf  s3.tf  sns.tf
src/: handler.rs  main.rs  poloniex.rs
src/aws/: dynamodb.rs
src/exchange/: error.rs  fetch.rs  mod.rs  models.rs  poloniex.rs
src/exchange/poloniex/: mod.rs  models.rs
src/exchange/yahoo/: chart.rs  macros.rs  mod.rs  models.rs  period.rs
src/models/: investment.rs  mod.rs
src/notifications/: discord.rs  mod.rs
src/sources/: error.rs  mod.rs  models.rs
src/sources/poloniex/: mod.rs  models.rs
src/sources/yahoo/: chart.rs  mod.rs  models.rs  period.rs
src/strategies/: mod.rs  rsi.rs
