[package]
name = "strategy"
version = "0.1.0"
edition = "2018"

[profile.dev]
debug = 0

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde_json = "1.0"
serde = "^1"
reqwest = { version = "^0.10", features = ["json"] }
polars = "^0.7"
num-traits = "0.2.12"
futures = "0.3.6"
ta = "0.3.0"